Changed the image!

--- a/public/index.html
+++ b/public/index.html
@@ -119,7 +119,7 @@
 					</div>
 					<div data-w-tab="Tab 2" class="w-tab-pane">
 						<div class="w-row">
-							<div class="w-col w-col-7"><img src="/prep/img/ask-q.gif"><img src="/prep/img/reply-to-q.gif" class="image-16"></div>
+							<div class="w-col w-col-7"><img src="/prep/img/ask-q-single.gif"></div>
 							<div class="w-col w-col-5">
 								<div class="edge-text">Better Tutoring:</div>
 								<ul class="edge-list">
