Re-done images and gifs

--- a/public/index.html
+++ b/public/index.html
@@ -46,8 +46,8 @@
 	</div>
 	<div id="Hero" class="hero">
 		<div class="container-3 w-container">
-			<h1 data-w-id="fd063355-1d59-c453-772a-aacdeb1ab928" style="opacity:0;-webkit-transform:translateX(40PX) translateY(0) translateZ(0) scaleX(1) scaleY(1) scaleZ(1) rotateX(0) rotateY(0) rotateZ(0) skewX(0) skewY(0);-moz-transform:translateX(40PX) translateY(0) translateZ(0) scaleX(1) scaleY(1) scaleZ(1) rotateX(0) rotateY(0) rotateZ(0) skewX(0) skewY(0);-ms-transform:translateX(40PX) translateY(0) translateZ(0) scaleX(1) scaleY(1) scaleZ(1) rotateX(0) rotateY(0) rotateZ(0) skewX(0) skewY(0);transform:translateX(40PX) translateY(0) translateZ(0) scaleX(1) scaleY(1) scaleZ(1) rotateX(0) rotateY(0) rotateZ(0) skewX(0) skewY(0)" class="heading-19">Higher SAT Score <strong>Today</strong></h1>
-			<h1 data-w-id="f9b8ce33-ad65-33b0-9e23-b80c8b77bdc0" style="opacity:0;-webkit-transform:translateX(-40PX) translateY(0) translateZ(0) scaleX(1) scaleY(1) scaleZ(1) rotateX(0) rotateY(0) rotateZ(0) skewX(0) skewY(0);-moz-transform:translateX(-40PX) translateY(0) translateZ(0) scaleX(1) scaleY(1) scaleZ(1) rotateX(0) rotateY(0) rotateZ(0) skewX(0) skewY(0);-ms-transform:translateX(-40PX) translateY(0) translateZ(0) scaleX(1) scaleY(1) scaleZ(1) rotateX(0) rotateY(0) rotateZ(0) skewX(0) skewY(0);transform:translateX(-40PX) translateY(0) translateZ(0) scaleX(1) scaleY(1) scaleZ(1) rotateX(0) rotateY(0) rotateZ(0) skewX(0) skewY(0)" class="heading-18">College Success <strong>Tomorrow</strong></h1>
+			<h1 data-w-id="fd063355-1d59-c453-772a-aacdeb1ab928" style="opacity:0;-webkit-transform:translateX(40PX) translateY(0) translateZ(0) scaleX(1) scaleY(1) scaleZ(1) rotateX(0) rotateY(0) rotateZ(0) skewX(0) skewY(0);-moz-transform:translateX(40PX) translateY(0) translateZ(0) scaleX(1) scaleY(1) scaleZ(1) rotateX(0) rotateY(0) rotateZ(0) skewX(0) skewY(0);-ms-transform:translateX(40PX) translateY(0) translateZ(0) scaleX(1) scaleY(1) scaleZ(1) rotateX(0) rotateY(0) rotateZ(0) skewX(0) skewY(0);transform:translateX(40PX) translateY(0) translateZ(0) scaleX(1) scaleY(1) scaleZ(1) rotateX(0) rotateY(0) rotateZ(0) skewX(0) skewY(0)" class="heading-19">Higher SAT Score Today</h1>
+			<h1 data-w-id="f9b8ce33-ad65-33b0-9e23-b80c8b77bdc0" style="opacity:0;-webkit-transform:translateX(-40PX) translateY(0) translateZ(0) scaleX(1) scaleY(1) scaleZ(1) rotateX(0) rotateY(0) rotateZ(0) skewX(0) skewY(0);-moz-transform:translateX(-40PX) translateY(0) translateZ(0) scaleX(1) scaleY(1) scaleZ(1) rotateX(0) rotateY(0) rotateZ(0) skewX(0) skewY(0);-ms-transform:translateX(-40PX) translateY(0) translateZ(0) scaleX(1) scaleY(1) scaleZ(1) rotateX(0) rotateY(0) rotateZ(0) skewX(0) skewY(0);transform:translateX(-40PX) translateY(0) translateZ(0) scaleX(1) scaleY(1) scaleZ(1) rotateX(0) rotateY(0) rotateZ(0) skewX(0) skewY(0)" class="heading-18">College Success Tomorrow</h1>
 		</div>
 		<div class="container-5 w-container"><a href="#Lemma-Difference" data-w-id="ca851329-a16e-01e8-2d35-6c22801cefda" style="opacity:0" class="button-5 w-button">Learn More!</a><a href="/books/ByrW8zXlGAhREdPsLb_cPA/checkout?refe=%2Ftesting%2Fsat" data-w-id="7f98aead-f4aa-a6b7-1137-b9dcf05f4947" style="opacity:0" class="button-4 w-button">Get Started!</a></div>
 		<img src="/prep/img/hero-desk.jpg" width="960" srcset="/prep/img/hero-desk-800.jpg 800w, /prep/img/hero-desk-1080.jpg 1080w, /prep/img/hero-desk-1600.jpg 1600w, /prep/img/hero-desk.jpg 1920w" sizes="(max-width: 991px) 100vw, 960px">
@@ -79,7 +79,14 @@
 	<div id="Partners" data-w-id="4b9faf18-1a3f-979c-346b-5978e67d690d" style="opacity:0" class="section-8">
 		<div class="w-container">
 			<h2 class="heading-10">Our Partners</h2>
-			<div><img src="/prep/img/logo_03_02_unionlogo.png" width="178" class="partner-image" data-ix="icon-grow"><img src="/prep/img/screen-shot-2015-01-22-at-12-20-50-pm.png" width="261" class="partner-image" data-ix="icon-grow"></div>
+			<div>
+				<a href="https://www.philadelphiafutures.org/" target="_blank">
+					<img src="/prep/img/philly-futures-logo.png" width="178" class="partner-image" data-ix="icon-grow">
+				</a>
+				<a href="http://letsgetready.org/" target="_blank">
+					<img src="/prep/img/lets-get-ready-logo.png" width="261" class="partner-image" data-ix="icon-grow">
+				</a>
+			</div>
 		</div>
 	</div>
 	<div data-w-id="1a11049b-3c92-126a-dd13-a1e16d1872c8" style="opacity:0" class="section-9">
@@ -92,21 +99,21 @@
 			<h1 class="heading-23">How Lemma gives you the edge you need</h1>
 			<div data-duration-in="300" data-duration-out="100" class="w-tabs">
 				<div class="tabs-menu w-tab-menu">
-					<a data-w-tab="Tab 1" class="tabbutton w-inline-block w-tab-link" data-ix="show-tab-indicator">
+					<a data-w-tab="Tab 1" class="tabbutton w-inline-block w-tab-link w--current" data-ix="show-tab-indicator">
 						<div>Great Content</div><img src="/prep/img/artboard-1.png" width="40" class="tab-indicator">
 					</a>
 					<a data-w-tab="Tab 2" class="tabbutton w-inline-block w-tab-link" data-ix="show-tab-indicator">
 						<div>Personalized Support</div><img src="/prep/img/artboard-1.png" width="40" class="tab-indicator">
 					</a>
-					<a data-w-tab="Tab 3" class="tabbutton w-inline-block w-tab-link w--current" data-ix="show-tab-indicator">
+					<a data-w-tab="Tab 3" class="tabbutton w-inline-block w-tab-link" data-ix="show-tab-indicator">
 						<div> Revolutionary Platform</div>
 						<img src="/prep/img/artboard-1.png" width="40" class="tab-indicator">
 					</a>
 				</div>
 				<div class="w-tab-content">
-					<div data-w-tab="Tab 1" class="w-tab-pane">
+					<div data-w-tab="Tab 1" class="w-tab-pane w--tab-active">
 						<div class="w-row">
-							<div class="w-col w-col-7"><img src="/prep/img/fraction---pedagogy-vid.gif"></div>
+							<div class="w-col w-col-7"><img src="/prep/img/pedagogy-GIF.gif" class="tabgif"></div>
 							<div class="w-col w-col-5">
 								<div class="edge-text">Better Pedagogy:</div>
 								<ul class="edge-list">
@@ -119,7 +126,7 @@
 					</div>
 					<div data-w-tab="Tab 2" class="w-tab-pane">
 						<div class="w-row">
-							<div class="w-col w-col-7"><img src="/prep/img/ask-q-single.gif"></div>
+							<div class="w-col w-col-7"><img src="/prep/img/ask-a-q-combined.gif" class="tabgif"></div>
 							<div class="w-col w-col-5">
 								<div class="edge-text">Better Tutoring:</div>
 								<ul class="edge-list">
@@ -130,9 +137,9 @@
 							</div>
 						</div>
 					</div>
-					<div data-w-tab="Tab 3" class="w-tab-pane w--tab-active">
+					<div data-w-tab="Tab 3" class="w-tab-pane">
 						<div class="w-row">
-							<div class="w-col w-col-7"><img src="/prep/img/favicon.png" width="90"></div>
+							<div class="w-col w-col-7"><img src="/prep/img/platform-combined.gif" class="tabgif"></div>
 							<div class="w-col w-col-5">
 								<div class="edge-text">Better Tech:</div>
 								<ul class="edge-list">
