--- a/public/index.html
+++ b/public/index.html
@@ -14,15 +14,12 @@
 	<title>Lemma Math Tutor</title>
 
 	<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+	<link href="https://fonts.googleapis.com/css?family=Roboto:300,400,400i,700,700i&subset=greek,latin" rel="stylesheet" type="text/css">
 
 	<link href="/prep/css/normalize.css" rel="stylesheet" type="text/css">
 	<link href="/prep/css/webflow.css" rel="stylesheet" type="text/css">
 	<link href="/prep/css/prep.webflow.css" rel="stylesheet" type="text/css">
 	<link href="/prep/css/footer.css" rel="stylesheet" type="text/css">
-
-	<script src="https://ajax.googleapis.com/ajax/libs/webfont/1.4.7/webfont.js" type="text/javascript"></script>
-	<script type="text/javascript">WebFont.load({  google: {    families: ["Roboto:regular","Roboto:100,100italic,300,300italic,regular,italic,500,500italic,700,700italic,900,900italic:latin,greek-ext,vietnamese,cyrillic,cyrillic-ext"]  }});</script>
-	<!-- [if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js" type="text/javascript"></script><![endif] -->
 	<script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
 </head>
 <body class="body">
@@ -100,21 +97,31 @@
 			<div data-duration-in="300" data-duration-out="100" class="w-tabs">
 				<div class="tabs-menu w-tab-menu">
 					<a data-w-tab="Tab 1" class="tabbutton w-inline-block w-tab-link w--current" data-ix="show-tab-indicator">
-						<div>Great Content</div><img src="/prep/img/artboard-1.png" width="40" class="tab-indicator">
+						<div>Great Content</div>
+						<div class="tab-indicator"></div>
 					</a>
 					<a data-w-tab="Tab 2" class="tabbutton w-inline-block w-tab-link" data-ix="show-tab-indicator">
-						<div>Personalized Support</div><img src="/prep/img/artboard-1.png" width="40" class="tab-indicator">
+						<div>Personalized Support</div>
+						<div class="tab-indicator"></div>
 					</a>
 					<a data-w-tab="Tab 3" class="tabbutton w-inline-block w-tab-link" data-ix="show-tab-indicator">
 						<div> Revolutionary Platform</div>
-						<img src="/prep/img/artboard-1.png" width="40" class="tab-indicator">
+						<div class="tab-indicator"></div>
 					</a>
 				</div>
 				<div class="w-tab-content">
 					<div data-w-tab="Tab 1" class="w-tab-pane w--tab-active">
 						<div class="w-row">
-							<div class="w-col w-col-7"><img src="/prep/img/pedagogy-GIF.gif" class="tabgif"></div>
-							<div class="w-col w-col-5">
+							<div class="w-col w-col-7">
+								<div class="tabgif">
+									<img src="/prep/img/comp-bar.svg" style="width: 400px; height: 25px; display: block;" />
+									<video autoplay="autoplay" loop="loop" width="400" height="300">
+										<source src="/prep/img/pedagogy.mp4" type="video/mp4" />
+										<!--<img src="/prep/img/pedagogy.gif" width="400" height="300" />-->
+									</video>
+								</div>
+							</div>
+							<div class="w-col w-col-5" style="margin-top: 20px;">
 								<div class="edge-text">Better Pedagogy:</div>
 								<ul class="edge-list">
 									<li class="list-item">Problems and solutions developed by Pavel Grinfeld, PhD.</li>
@@ -126,8 +133,16 @@
 					</div>
 					<div data-w-tab="Tab 2" class="w-tab-pane">
 						<div class="w-row">
-							<div class="w-col w-col-7"><img src="/prep/img/ask-a-q-combined.gif" class="tabgif"></div>
-							<div class="w-col w-col-5">
+							<div class="w-col w-col-7">
+								<div class="tabgif">
+									<img src="/prep/img/comp-bar.svg" style="width: 400px; height: 25px;" />
+									<video autoplay="autoplay" loop="loop" width="400" height="300" >
+										<source src="/prep/img/ask-a-q.mp4" type="video/mp4" />
+										<!--<img src="/prep/img/ask-a-q.gif" width="400" height="300" />-->
+									</video>
+								</div>
+							</div>
+							<div class="w-col w-col-5" style="margin-top: 20px;">
 								<div class="edge-text">Better Tutoring:</div>
 								<ul class="edge-list">
 									<li class="list-item">The system tracks the problems you do and records the steps you take to solve</li>
@@ -139,8 +154,16 @@
 					</div>
 					<div data-w-tab="Tab 3" class="w-tab-pane">
 						<div class="w-row">
-							<div class="w-col w-col-7"><img src="/prep/img/platform-combined.gif" class="tabgif"></div>
-							<div class="w-col w-col-5">
+							<div class="w-col w-col-7">
+								<div class="tabgif">
+									<img src="/prep/img/comp-bar.svg" style="width: 400px; height: 25px;" />
+									<video autoplay="autoplay" loop="loop" width="400" height="300">
+										<source src="/prep/img/platform.mp4" type="video/mp4" />
+										<!--<img src="/prep/img/platform.gif" width="400" height="300" />-->
+									</video>
+								</div>
+							</div>
+							<div class="w-col w-col-5" style="margin-top: 20px;">
 								<div class="edge-text">Better Tech:</div>
 								<ul class="edge-list">
 									<li class="list-item">Amazing MathBox allows you to intuitively write beautiful math</li>
