Defer loading all lower images

--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,7 @@
 		<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
 	</noscript>
 	<link href="/prep/css/normalize.css" rel="stylesheet" type="text/css">
+	<link href="/prep/css/animate.css" rel="stylesheet" type="text/css">
 	<link href="/prep/css/webflow.css" rel="stylesheet" type="text/css">
 	<link href="/prep/css/prep.webflow.css" rel="stylesheet" type="text/css">
 	<link href="/prep/css/footer.css" rel="stylesheet" type="text/css">
@@ -44,31 +45,37 @@
 	</div>
 	<div id="Hero" class="hero">
 		<div class="container-3 w-container">
-			<h1 data-w-id="fd063355-1d59-c453-772a-aacdeb1ab928" style="opacity:0;-webkit-transform:translateX(40PX) translateY(0) translateZ(0) scaleX(1) scaleY(1) scaleZ(1) rotateX(0) rotateY(0) rotateZ(0) skewX(0) skewY(0);-moz-transform:translateX(40PX) translateY(0) translateZ(0) scaleX(1) scaleY(1) scaleZ(1) rotateX(0) rotateY(0) rotateZ(0) skewX(0) skewY(0);-ms-transform:translateX(40PX) translateY(0) translateZ(0) scaleX(1) scaleY(1) scaleZ(1) rotateX(0) rotateY(0) rotateZ(0) skewX(0) skewY(0);transform:translateX(40PX) translateY(0) translateZ(0) scaleX(1) scaleY(1) scaleZ(1) rotateX(0) rotateY(0) rotateZ(0) skewX(0) skewY(0)" class="heading-19">Higher SAT Score Today</h1>
-			<h1 data-w-id="f9b8ce33-ad65-33b0-9e23-b80c8b77bdc0" style="opacity:0;-webkit-transform:translateX(-40PX) translateY(0) translateZ(0) scaleX(1) scaleY(1) scaleZ(1) rotateX(0) rotateY(0) rotateZ(0) skewX(0) skewY(0);-moz-transform:translateX(-40PX) translateY(0) translateZ(0) scaleX(1) scaleY(1) scaleZ(1) rotateX(0) rotateY(0) rotateZ(0) skewX(0) skewY(0);-ms-transform:translateX(-40PX) translateY(0) translateZ(0) scaleX(1) scaleY(1) scaleZ(1) rotateX(0) rotateY(0) rotateZ(0) skewX(0) skewY(0);transform:translateX(-40PX) translateY(0) translateZ(0) scaleX(1) scaleY(1) scaleZ(1) rotateX(0) rotateY(0) rotateZ(0) skewX(0) skewY(0)" class="heading-18">College Success Tomorrow</h1>
+			<h1 class="heading-19 animated fadeInLeftSmall">Higher SAT Score Today</h1>
+			<h1 class="heading-18 animated fadeInRightSmall">College Success Tomorrow</h1>
 		</div>
-		<div class="container-5 w-container"><a href="#Lemma-Difference" data-w-id="ca851329-a16e-01e8-2d35-6c22801cefda" style="opacity:0" class="button-5 w-button">Learn More!</a><a href="/books/ByrW8zXlGAhREdPsLb_cPA/checkout?refe=%2Ftesting%2Fsat" data-w-id="7f98aead-f4aa-a6b7-1137-b9dcf05f4947" style="opacity:0" class="button-4 w-button">Get Started!</a></div>
+		<div class="container-5 w-container animated fadeIn">
+			<a href="#Lemma-Difference" class="button-5 w-button">Learn More!</a>
+			<a href="/books/ByrW8zXlGAhREdPsLb_cPA/checkout?refe=%2Ftesting%2Fsat" class="button-4 w-button">Get Started!</a>
+		</div>
 		<img src="/prep/img/hero-desk.jpg" width="960" srcset="/prep/img/hero-desk-800.jpg 800w, /prep/img/hero-desk-1080.jpg 1080w, /prep/img/hero-desk-1600.jpg 1600w, /prep/img/hero-desk.jpg 1920w" sizes="(max-width: 991px) 100vw, 960px">
 	</div>
 	<div id="Tagline" class="section-6">
 		<h2 class="heading-21">Outstanding math content and support from a team of dedicated educators</h2>
 	</div>
-	<div id="Lemma-Difference" data-w-id="b93b2bba-f83e-851c-cb32-3aef626fce2f" style="opacity:0" class="section">
+	<div id="Lemma-Difference" data-w-id="b93b2bba-f83e-851c-cb32-3aef626fce2f" style="opacity:0" class="section defer">
 		<div>
 			<h1 class="heading-17">The Lemma Difference</h1>
 		</div>
 		<div class="w-container">
 			<div class="row-3 w-row">
 				<div class="dif_block w-col w-col-4">
-					<h3 class="dif_block-heading">Practice</h3><img src="/prep/img/hundreds-of-problems.svg" class="lemdifimg" data-ix="icon-grow">
+					<h3 class="dif_block-heading">Practice</h3>
+					<div class="square-img"><img data-src="/prep/img/hundreds-of-problems.svg" class="lemdifimg" data-ix="icon-grow" /></div>
 					<div class="text-block-3">Hundreds of great problems</div>
 				</div>
 				<div class="dif_block w-col w-col-4">
-					<h3 class="dif_block-heading">Learn</h3><img src="/prep/img/personalized-dashboard.svg" class="lemdifimg" data-ix="icon-grow">
+					<h3 class="dif_block-heading">Learn</h3>
+					<div class="square-img"><img data-src="/prep/img/personalized-dashboard.svg" class="lemdifimg" data-ix="icon-grow"></div>
 					<div class="text-block-3">Custom dashboard directs your study</div>
 				</div>
 				<div class="dif_block w-col w-col-4">
-					<h3 class="dif_block-heading">Connect</h3><img src="/prep/img/communications-suite.svg" class="lemdifimg" data-ix="icon-grow">
+					<h3 class="dif_block-heading">Connect</h3>
+					<div class="square-img"><img data-src="/prep/img/communications-suite.svg" class="lemdifimg" data-ix="icon-grow"></div>
 					<div class="text-block-3">Personalized online support</div>
 				</div>
 			</div>
@@ -79,10 +86,10 @@
 			<h2 class="heading-10">Our Partners</h2>
 			<div>
 				<a href="https://www.philadelphiafutures.org/" target="_blank" style="text-decoration: none;">
-					<img class="partner-image" src="/prep/img/philly-futures-logo.png" style="width: 178px; height: 217px" data-ix="icon-grow" />
+					<img class="partner-image" data-src="/prep/img/philly-futures-logo.png" style="width: 178px; height: 217px" data-ix="icon-grow" />
 				</a>
 				<a href="http://letsgetready.org/" target="_blank">
-					<img class="partner-image" src="/prep/img/lets-get-ready-logo.png" style="width: 261px; height: 143px" data-ix="icon-grow" />
+					<img class="partner-image" data-src="/prep/img/lets-get-ready-logo.png" style="width: 261px; height: 143px" data-ix="icon-grow" />
 				</a>
 			</div>
 		</div>
@@ -117,7 +124,7 @@
 								<div class="tabgif">
 									<img src="/prep/img/comp-bar.svg" style="width: 400px; height: 25px; display: block;" />
 									<video autoplay="autoplay" loop="loop" width="400" height="300">
-										<source src="/prep/img/pedagogy.mp4" type="video/mp4" />
+										<source data-src="/prep/img/pedagogy.mp4" type="video/mp4" />
 										<!--<img src="/prep/img/pedagogy.gif" width="400" height="300" />-->
 									</video>
 								</div>
@@ -138,7 +145,7 @@
 								<div class="tabgif">
 									<img src="/prep/img/comp-bar.svg" style="width: 400px; height: 25px;" />
 									<video autoplay="autoplay" loop="loop" width="400" height="300" >
-										<source src="/prep/img/ask-a-q.mp4" type="video/mp4" />
+										<source data-src="/prep/img/ask-a-q.mp4" type="video/mp4" />
 										<!--<img src="/prep/img/ask-a-q.gif" width="400" height="300" />-->
 									</video>
 								</div>
@@ -159,7 +166,7 @@
 								<div class="tabgif">
 									<img src="/prep/img/comp-bar.svg" style="width: 400px; height: 25px;" />
 									<video autoplay="autoplay" loop="loop" width="400" height="300">
-										<source src="/prep/img/platform.mp4" type="video/mp4" />
+										<source data-src="/prep/img/platform.mp4" type="video/mp4" />
 										<!--<img src="/prep/img/platform.gif" width="400" height="300" />-->
 									</video>
 								</div>
@@ -244,32 +251,6 @@
 		</div>
 	</footer>
 
-	<!--
-	TODO: Also need to get rid of css
-	<div class="section-12">
-		<div class="w-container">
-			<div class="w-row">
-				<div class="w-col w-col-4"><img src="/prep/img/lemma1920x700.png" width="140" srcset="/prep/img/lemma1920x700-p-500.png 500w, /prep/img/lemma1920x700-p-800.png 800w, /prep/img/lemma1920x700-p-1080.png 1080w, /prep/img/lemma1920x700-p-1600.png 1600w, /prep/img/lemma1920x700.png 1920w" sizes="(max-width: 479px) 80vw, 140px" class="image-14">
-					<div class="footer-text">Beautiful Philadelphia, PA</div>
-					<div class="footer-text">Phone: (212) 588-2920</div>
-					<div class="footer-text">Email: info@lem.ma</div>
-				</div>
-				<div class="w-col w-col-4">
-					<h3 class="heading-24">General Links</h3>
-					<div class="link-div"><a href="https://www.lem.ma/home">Home</a></div>
-					<div class="link-div"><a href="https://www.lem.ma/start">Dashboard</a></div>
-					<div class="link-div"><a href="https://angel.co/lemma" target="_blank">Careers</a></div>
-					<div class="link-div"><a href="https://www.lem.ma/terms/" target="_blank">Terms of Service</a></div>
-					<div class="link-div"><a href="https://www.lem.ma/privacy/">Privacy Policy</a></div>
-					<div class="link-div"><a href="https://www.lem.ma/blog/" target="_blank">Blog</a></div>
-				</div>
-				<div class="w-col w-col-4"><img src="/prep/img/FavIcon.png" width="90">
-					<div>^^insert Social widgets here^^</div>
-				</div>
-			</div>
-		</div>
-	</div>
--->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 	<script src="/prep/js/webflow.js" type="text/javascript"></script>
 
@@ -344,10 +325,45 @@
 		document.body.appendChild(replacement)
 		addStylesNode.parentElement.removeChild(addStylesNode);
 	};
-	//var raf = window.requestAnimationFrame || window.mozRequestAnimationFrame ||
-	//window.webkitRequestAnimationFrame || window.msRequestAnimationFrame;
-	//if (raf) raf(function() { window.setTimeout(loadDeferredStyles, 0); });
-	window.addEventListener('load', loadDeferredStyles);
+	var raf = window.requestAnimationFrame || window.mozRequestAnimationFrame ||
+	window.webkitRequestAnimationFrame || window.msRequestAnimationFrame;
+	if (raf) raf(function() { window.setTimeout(loadDeferredStyles, 0); });
+	else window.addEventListener('load', loadDeferredStyles);
+	</script>
+
+	<script>
+		(function() {
+
+			function onscroll(e) {
+				if(window.scrollY < $('.hero').height()) {
+					return;
+				}
+
+				$(window).off('scroll', onscroll);
+
+				$('[data-src]').map(function(i, el) {
+					$(el).attr('src', $(el).attr('data-src'));
+
+					if($(el).prop('tagName').toLowerCase() == 'source') {
+						var vid = el.parentNode;
+						setTimeout(function() {
+							vid.load();
+							vid.play()
+						});
+					}
+				});
+
+			}
+
+			$(window).on('scroll', onscroll);
+			onscroll();
+
+		})()
+
+
+
+
+
 	</script>
 </body>
 </html>
