Pavel Changes + Responsiveness

--- a/public/index.html
+++ b/public/index.html
@@ -36,10 +36,12 @@
 	<div data-w-id="5a7d9efb-3f44-bd2a-4209-3deb240e8af0" style="-webkit-transform:translateX(0) translateY(-42PX) translateZ(0) scaleX(1) scaleY(1) scaleZ(1) rotateX(0) rotateY(0) rotateZ(0) skewX(0) skewY(0);-moz-transform:translateX(0) translateY(-42PX) translateZ(0) scaleX(1) scaleY(1) scaleZ(1) rotateX(0) rotateY(0) rotateZ(0) skewX(0) skewY(0);-ms-transform:translateX(0) translateY(-42PX) translateZ(0) scaleX(1) scaleY(1) scaleZ(1) rotateX(0) rotateY(0) rotateZ(0) skewX(0) skewY(0);transform:translateX(0) translateY(-42PX) translateZ(0) scaleX(1) scaleY(1) scaleZ(1) rotateX(0) rotateY(0) rotateZ(0) skewX(0) skewY(0);opacity:0" class="announcement-div">
 		<div class="w-container">
 			<div class="w-row">
+				<div class="w-col w-col-3">
+					<a href="#Partners" class="announcement-button w-button">Announcement</a>
+				</div>
 				<div class="w-col w-col-9">
 					<div class="announcement-text">Lemma partners with Let&#x27;s Get Ready to deliver high impact SAT prep to its students and tutors</div>
 				</div>
-				<div class="w-col w-col-3"><a href="#Partners" class="announcement-button w-button">Learn More</a></div>
 			</div>
 		</div>
 	</div>
@@ -49,7 +51,6 @@
 			<h1 class="heading-18 animated fadeInRightSmall">College Success Tomorrow</h1>
 		</div>
 		<div class="container-5 w-container animated fadeIn">
-			<a href="#Lemma-Difference" class="button-5 w-button">Learn More!</a>
 			<a href="/books/ByrW8zXlGAhREdPsLb_cPA/checkout?refe=%2Ftesting%2Fsat" class="button-4 w-button">Get Started!</a>
 		</div>
 		<img src="/prep/img/hero-desk.jpg" width="960" srcset="/prep/img/hero-desk-800.jpg 800w, /prep/img/hero-desk-1080.jpg 1080w, /prep/img/hero-desk-1600.jpg 1600w, /prep/img/hero-desk.jpg 1920w" sizes="(max-width: 991px) 100vw, 960px">
