Blog links to buttons

--- a/public/index.html
+++ b/public/index.html
@@ -37,7 +37,7 @@
 		<div class="w-container">
 			<div class="w-row">
 				<div class="w-col w-col-3">
-					<a href="#Partners" class="announcement-button w-button">Announcement</a>
+					<a href="/blog/announcing-lets-get-ready/" class="announcement-button w-button">Announcement</a>
 				</div>
 				<div class="w-col w-col-9">
 					<div class="announcement-text">Lemma partners with Let&#x27;s Get Ready to deliver high impact SAT prep to its students and tutors</div>
@@ -97,7 +97,7 @@
 	</div>
 	<div data-w-id="1a11049b-3c92-126a-dd13-a1e16d1872c8" style="opacity:0" class="section-9">
 		<div class="w-container">
-			<div class="text-block">Learn how Lemma can help change your students&#x27; lives</div><a href="/blog" class="button-6 w-button">Lemma Partnerships</a>
+			<div class="text-block">Learn how Lemma can help change your students&#x27; lives</div><a href="/blog/announcing-lets-get-ready/" class="button-6 w-button">Lemma Partnerships</a>
 		</div>
 	</div>
 	<div data-w-id="a4d2c0b6-9b5e-f9d6-e322-1b3fd50bde31" style="opacity:0" class="section-11">
