Fix image references

--- a/public/index.html
+++ b/public/index.html
@@ -53,7 +53,7 @@
 		<div class="container-5 w-container animated fadeIn">
 			<a href="/books/ByrW8zXlGAhREdPsLb_cPA/checkout?refe=%2Ftesting%2Fsat" class="button-4 w-button">Get Started!</a>
 		</div>
-		<img src="/prep/img/hero-desk.jpg" width="960" srcset="/prep/img/hero-desk-800.jpg 800w, /prep/img/hero-desk-1080.jpg 1080w, /prep/img/hero-desk-1600.jpg 1600w, /prep/img/hero-desk.jpg 1920w" sizes="(max-width: 991px) 100vw, 960px">
+		<img src="/prep/img/hero-desk.jpg" width="960" srcset="/prep/img/hero-desk-800.jpeg 800w, /prep/img/hero-desk-1080.jpeg 1080w, /prep/img/hero-desk-1600.jpeg 1600w, /prep/img/hero-desk.jpg 1920w" sizes="(max-width: 991px) 100vw, 960px">
 	</div>
 	<div id="Tagline" class="section-6">
 		<h2 class="heading-21">Outstanding math content and support from a team of dedicated educators</h2>
