Some updates to prep

--- a/public/index.html
+++ b/public/index.html
@@ -51,12 +51,13 @@
 			<h1 class="heading-18 animated fadeInRightSmall">College Success Tomorrow</h1>
 		</div>
 		<div class="container-5 w-container animated fadeIn">
-			<a href="/books/ByrW8zXlGAhREdPsLb_cPA/checkout?refe=%2Ftesting%2Fsat" class="button-4 w-button">Get Started!</a>
+			<a href="/books/ByrW8zXlGAhREdPsLb_cPA/checkout?refe=%2Ftesting%2Fsat" class="button-4 w-button">Start Your SAT Prep Here!</a>
 		</div>
 		<img src="/prep/img/hero-desk.jpg" width="960" srcset="/prep/img/hero-desk-800.jpeg 800w, /prep/img/hero-desk-1080.jpeg 1080w, /prep/img/hero-desk-1600.jpeg 1600w, /prep/img/hero-desk.jpg 1920w" sizes="(max-width: 991px) 100vw, 960px">
 	</div>
 	<div id="Tagline" class="section-6">
 		<h2 class="heading-21">Outstanding math content and support from a team of dedicated educators</h2>
+		<div class="textblock-12">$49 for a full year!</div>
 	</div>
 	<div id="Lemma-Difference" data-w-id="b93b2bba-f83e-851c-cb32-3aef626fce2f" style="opacity:0" class="section defer">
 		<div>
