--- a/public/prep.html
+++ b/public/prep.html
@@ -11,7 +11,7 @@
 	<meta property="fb:app_id" content="810405998993973">
 	<meta property="og:url" content="https://www.lem.ma/prep/">
 	<meta property="og:image" content="https://www.lem.ma/prep/images/og_img.jpg">
-	<title>Lemma Math Tutor</title>
+	<title>Lemma - Your Math Tutor</title>
 
 	<link href="https://fonts.googleapis.com/css?family=Roboto:300,400,400i,700,700i&subset=greek,latin" rel="stylesheet" type="text/css">
 	<noscript id="deferred-styles">
@@ -20,7 +20,7 @@
 	<link href="/prep/css/normalize.css" rel="stylesheet" type="text/css">
 	<link href="/prep/css/animate.css" rel="stylesheet" type="text/css">
 	<link href="/prep/css/webflow.css" rel="stylesheet" type="text/css">
-	<link href="/prep/css/prep.webflow.css" rel="stylesheet" type="text/css">
+	<link href="/prep/css/prep.css" rel="stylesheet" type="text/css">
 	<link href="/prep/css/footer.css" rel="stylesheet" type="text/css">
 	<script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
 </head>
@@ -33,14 +33,14 @@
 			</div>
 		</div>
 	</div>
-	<div data-w-id="5a7d9efb-3f44-bd2a-4209-3deb240e8af0" style="-webkit-transform:translateX(0) translateY(-42PX) translateZ(0) scaleX(1) scaleY(1) scaleZ(1) rotateX(0) rotateY(0) rotateZ(0) skewX(0) skewY(0);-moz-transform:translateX(0) translateY(-42PX) translateZ(0) scaleX(1) scaleY(1) scaleZ(1) rotateX(0) rotateY(0) rotateZ(0) skewX(0) skewY(0);-ms-transform:translateX(0) translateY(-42PX) translateZ(0) scaleX(1) scaleY(1) scaleZ(1) rotateX(0) rotateY(0) rotateZ(0) skewX(0) skewY(0);transform:translateX(0) translateY(-42PX) translateZ(0) scaleX(1) scaleY(1) scaleZ(1) rotateX(0) rotateY(0) rotateZ(0) skewX(0) skewY(0);opacity:0" class="announcement-div">
+	<div data-w-id="5a7d9efb-3f44-bd2a-4209-3deb240e8af0" class="announcement-div" style="-webkit-transform:translateX(0) translateY(-42PX) translateZ(0) scaleX(1) scaleY(1) scaleZ(1) rotateX(0) rotateY(0) rotateZ(0) skewX(0) skewY(0);-moz-transform:translateX(0) translateY(-42PX) translateZ(0) scaleX(1) scaleY(1) scaleZ(1) rotateX(0) rotateY(0) rotateZ(0) skewX(0) skewY(0);-ms-transform:translateX(0) translateY(-42PX) translateZ(0) scaleX(1) scaleY(1) scaleZ(1) rotateX(0) rotateY(0) rotateZ(0) skewX(0) skewY(0);transform:translateX(0) translateY(-42PX) translateZ(0) scaleX(1) scaleY(1) scaleZ(1) rotateX(0) rotateY(0) rotateZ(0) skewX(0) skewY(0);opacity:0">
 		<div class="w-container">
 			<div class="w-row">
 				<div class="w-col w-col-3">
 					<a href="/blog/announcing-lets-get-ready/" class="announcement-button w-button">Announcement</a>
 				</div>
 				<div class="w-col w-col-9">
-					<div class="announcement-text">Lemma partners with Let&#x27;s Get Ready to deliver high impact SAT prep to its students and tutors</div>
+					<div class="announcement-text">Lemma partners with Let&#x27;s Get Ready to help better prepare students for college!</div>
 				</div>
 			</div>
 		</div>
@@ -55,11 +55,11 @@
 		</div>
 		<img src="/prep/img/hero-desk.jpg" width="960" srcset="/prep/img/hero-desk-800.jpeg 800w, /prep/img/hero-desk-1080.jpeg 1080w, /prep/img/hero-desk-1600.jpeg 1600w, /prep/img/hero-desk.jpg 1920w" sizes="(max-width: 991px) 100vw, 960px">
 	</div>
-	<div id="Tagline" class="section-6">
+	<div id="Tagline" class="section-6 animated fadeIn">
 		<h2 class="heading-21">Outstanding math content and support from a team of dedicated educators</h2>
 		<div class="textblock-12">$49 for a full year!</div>
 	</div>
-	<div id="Lemma-Difference" data-w-id="b93b2bba-f83e-851c-cb32-3aef626fce2f" style="opacity:0" class="section defer">
+	<div id="Lemma-Difference" data-w-id="b93b2bba-f83e-851c-cb32-3aef626fce2f" style="opacity:0" class="lemma-difference">
 		<div>
 			<h1 class="heading-17">The Lemma Difference</h1>
 		</div>
@@ -86,19 +86,25 @@
 	<div id="Partners" data-w-id="4b9faf18-1a3f-979c-346b-5978e67d690d" style="opacity:0" class="section-8">
 		<div class="w-container">
 			<h2 class="heading-10">Our Partners</h2>
-			<div>
-				<a href="https://www.philadelphiafutures.org/" target="_blank" style="text-decoration: none;">
-					<img class="partner-image" data-src="/prep/img/philly-futures-logo.png" style="width: 178px; height: 217px" data-ix="icon-grow" />
+			<div class="partner-wrap">
+				<a href="https://www.philadelphiafutures.org/" target="_blank" />
+					<img class="partner-image" data-src="/prep/img/pf-color.svg" data-ix="icon-grow"/>
 				</a>
 				<a href="http://letsgetready.org/" target="_blank">
-					<img class="partner-image" data-src="/prep/img/lets-get-ready-logo.png" style="width: 261px; height: 143px" data-ix="icon-grow" />
+					<img class="partner-image" data-src="/prep/img/lgr-colored_1.svg" data-ix="icon-grow"/>
+				</a>
+				<a href="https://www.newyorkcares.org/" target="_blank">
+					<img class="partner-image" data-src="/prep/img/nycares-colored.svg" data-ix="icon-grow"/>
+				</a>
+				<a href="https://opportunitynetwork.org/" target="_blank">
+					<img class="partner-image" data-src="/prep/img/oppnet-colored.svg" data-ix="icon-grow"/>
 				</a>
 			</div>
 		</div>
 	</div>
-	<div data-w-id="1a11049b-3c92-126a-dd13-a1e16d1872c8" style="opacity:0" class="section-9">
+	<div data-w-id="1a11049b-3c92-126a-dd13-a1e16d1872c8" style="opacity:0" class="call-banner">
 		<div class="w-container">
-			<div class="text-block">Learn how Lemma can help change your students&#x27; lives</div><a href="/blog/announcing-lets-get-ready/" class="button-6 w-button">Lemma Partnerships</a>
+			<div class="call-2">Learn how Lemma can help change your students&#x27; lives</div><a href="/blog/announcing-lets-get-ready/" class="button-6 w-button">Partner with us!</a>
 		</div>
 	</div>
 	<div data-w-id="a4d2c0b6-9b5e-f9d6-e322-1b3fd50bde31" style="opacity:0" class="section-11">
@@ -155,9 +161,9 @@
 							<div class="w-col w-col-5" style="margin-top: 20px;">
 								<div class="edge-text">Better Tutoring:</div>
 								<ul class="edge-list">
-									<li class="list-item">The system tracks the problems you do and records the steps you take to solve</li>
+									<li class="list-item">Our system tracks the problems you do and records the steps you take to solve</li>
 									<li class="list-item">Your work is shown to our team of tutors</li>
-									<li class="list-item">Tutor responds with advice on how improve your answer!</li>
+									<li class="list-item">Our team responds with advice on how improve your answer!</li>
 								</ul>
 							</div>
 						</div>
