Minor changes to meta on/prep and the shortcut modal
Not sure if you want it this way or not.

--- a/public/partners.html
+++ b/public/partners.html
@@ -6,9 +6,9 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width,initial-scale=1">
 
-	<meta name="description" content="Lemma builds competence by providing amazing content, practice and support over an innovative platform. Get started preparing for the SAT and more.">
-	<meta name="og:description" content="Lemma builds competence by providing amazing content, practice and support over an innovative platform. Get started preparing for the SAT and more.">
-	<meta property="og:title" content="Lemma Math Tutor">
+	<meta name="description" content="Lemma partners with high-impact organizations to deliver top-tier SAT Prep content over an intuitive platform.">
+	<meta name="og:description" content="Lemma partners with high-impact organizations to deliver top-tier SAT Prep content over an intuitive platform.">
+	<meta property="og:title" content="Lemma | SAT Prep Partners">
 	<meta property="og:type" content="website">
 	<meta property="fb:app_id" content="810405998993973">
 	<meta property="og:url" content="https://www.lem.ma/prep/">
