--- a/public/prep.html
+++ b/public/prep.html
@@ -5,8 +5,8 @@
 	<meta name="viewport" content="width=device-width,initial-scale=1">
 
 	<meta name="description" content="Lemma builds competence by providing amazing content, practice and support over an innovative platform. Get started preparing for the SAT and more.">
-	<meta name="og:description" content="Lemma builds competence by providing amazing content, practice and support over an innovative platform. Get started preparing for the SAT and more.">
-	<meta property="og:title" content="Lemma Math Tutor">
+	<meta name="og:description" content="Lemma builds competence by providing amazing content, practice and support over an innovative platform. Get started preparing for the SAT AP Calculus and more.">
+	<meta property="og:title" content="Lemma | SAT Prep">
 	<meta property="og:type" content="website">
 	<meta property="fb:app_id" content="810405998993973">
 	<meta property="og:url" content="https://www.lem.ma/prep/">
