added links to tutorials

--- a/public/keyboard-shortcuts-modal/index.html
+++ b/public/keyboard-shortcuts-modal/index.html
@@ -46,25 +46,25 @@
                       </td>
                   </tr>
                   <tr>
-                    <td>Fractions: $\frac{a}{b}$</td>
+                    <td><a href="https://www.lem.ma/content/BSOjJyo9ZWt-eCLtBOntTw">Fractions:</a> $\frac{a}{b}$</td>
                       <td>
                           <span class="kbd">/</span> or <span class="kbd">ctrl</span>+<span class="kbd">/</span> or <span class="kbd">ctrl</span>+<span class="kbd">shift</span>+<span class="kbd">/</span>
                       </td>
                   </tr>
                   <tr>
-                    <td>Exponents: $x^2$</td>
+                    <td><a href="https://www.lem.ma/content/BHCX0q10_Z923lUjP65-Xg">Exponents:</a> $x^2$</td>
                       <td>
                           <span class="kbd">shift</span>+<span class="kbd">6</span> or <span class="kbd">ctrl</span>+<span class="kbd">6</span>
                       </td>
                   </tr>
                   <tr>
-                    <td>Radicals: $\sqrt{x}$</td>
+                    <td><a href="https://www.lem.ma/content/BAF4B9ysSFANDpVH_RkGlg">Radicals:</a> $\sqrt{x}$</td>
                       <td>
                           <span class="kbd">ctrl</span>+<span class="kbd">r</span>
                       </td>
                   </tr>
                   <tr>
-                    <td>Entering Parentheses: $(x)$</td>
+                    <td>Entering <a href="https://www.lem.ma/content/BKSK12YLaKb3ISxiM20nTg">Parentheses:</a> $(x)$</td>
                     <td>
                       <span class="kbd">Shift</span>+<span class="kbd">9</span>or<span class="kbd">0</span>
                     </td>
