--- a/public/partners.html
+++ b/public/partners.html
@@ -19,18 +19,18 @@
 	<noscript id="deferred-styles">
 		<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
 	</noscript>
-	<link href="css/normalize.css" rel="stylesheet" type="text/css">
-	<link href="css/animate.css" rel="stylesheet" type="text/css">
-	<link href="css/webflow.css" rel="stylesheet" type="text/css">
-	<link href="css/partners.css" rel="stylesheet" type="text/css">
-	<link href="css/footer.css" rel="stylesheet" type="text/css">
+	<link href="/css/normalize.css" rel="stylesheet" type="text/css">
+	<link href="/css/animate.css" rel="stylesheet" type="text/css">
+	<link href="/css/webflow.css" rel="stylesheet" type="text/css">
+	<link href="/css/partners.css" rel="stylesheet" type="text/css">
+	<link href="/css/footer.css" rel="stylesheet" type="text/css">
 	<script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
 </head>
 
 <body class="body">
 	<body class="body">
 		<div data-collapse="medium" data-animation="default" data-duration="400" class="navbar w-nav">
-			<div class="container w-container"><a href="#" class="w-nav-brand"><img src="/prep/img/lemma1920x700.png" width="130" srcset="/prep/img/lemma1920x700-p-500.png 500w, /prep/img/lemma1920x700-p-800.png 800w, /prep/img/lemma1920x700-p-1080.png 1080w, /prep/img/lemma1920x700-p-1600.png 1600w, /prep/img/lemma1920x700.png 1920w" sizes="(max-width: 479px) 93vw, 168px" class="image-17"></a>
+			<div class="container w-container"><a href="#" class="w-nav-brand"><img src="/img/lemma1920x700.png" width="130" srcset="/img/lemma1920x700-p-500.png 500w, /img/lemma1920x700-p-800.png 800w, /img/lemma1920x700-p-1080.png 1080w, /img/lemma1920x700-p-1600.png 1600w, /img/lemma1920x700.png 1920w" sizes="(max-width: 479px) 93vw, 168px" class="image-17"></a>
 				<nav role="navigation" class="nav-menu w-nav-menu">
 					<a href="#Lemma-Difference" class="nav-link about w-nav-link">About</a>
 					<a href="/home/team" class="nav-link teamlink w-nav-link">Team</a>
@@ -53,21 +53,21 @@
     <div class="icons-wrap w-container">
 			<a href="#pf">
 	      	<div class="pf-swap">
-						<img src="img/pf-color_1.svg" width="100" class="part-hover">
+						<img src="/img/pf-color_1.svg" width="100" class="part-hover">
 					</div>
 			</a>
 			<a href="#lgr">
 	      	<div class="lgr-swap">
-						<img src="img/lgr-colored_2.svg" width="100" class="part-hover">
+						<img src="/img/lgr-colored_2.svg" width="100" class="part-hover">
 					</div>
 			</a>
 			<a href="#nyc">
 	      	<div class="nycares-swap">
-						<img src="img/nycares-colored.svg" width="100" class="part-hover">
+						<img src="/img/nycares-colored.svg" width="100" class="part-hover">
 					</div>
 			<a href="#oppnet">
 	      	<div class="opp-swap">
-						<img src="img/oppnet-colored.svg" width="100" class="part-hover">
+						<img src="/img/oppnet-colored.svg" width="100" class="part-hover">
 					</div>
 			</a>
     </div>
@@ -76,7 +76,7 @@
     <h1 class="partner-heading">Our Partners</h1>
     <div class="w-container">
       <div class="part-row-1 w-row">
-        <div class="partner-column-1 w-col w-col-4"><img src="img/pf-color.svg" class="partnerimg"></div>
+        <div class="partner-column-1 w-col w-col-4"><img src="/img/pf-color.svg" class="partnerimg"></div>
         <div class="part-desc-wrap w-col w-col-8">
           <h3 class="partner-name-right">Philadelphia Futures</h3>
           	<p class="paragraph">Animated by a belief in the importance of empowering children, Philadelphia futures has been changing the lives of Philadelphian high schoolers since 1989. The organization focuses on students who are first in their familes to attend college. <br>
@@ -105,7 +105,7 @@
   </div>
   <div class="partner-section-1 lgr" id="lgr">
     <div class="w-container">
-      <div class="phone-part-img"><img src="img/lgr-colored_1.svg" width="300" class="partnerimg"></div>
+      <div class="phone-part-img"><img src="/img/lgr-colored_1.svg" width="300" class="partnerimg"></div>
       <div class="part-row-2 w-row">
         <div class="part-desc-wrap w-col w-col-8">
           <h3 class="partner-name-left">Let&#x27;s Get Ready</h3>
@@ -114,7 +114,7 @@
           <p class="part-desc">Let’s Get Ready provides free SAT preparation, admission counseling, and post-enrollment mentoring to students from low-income backgrounds and first-generation-to-college students to help them get into and graduate from college. Our peer-driven program is administered by volunteer college students, keeping costs low and ensuring outstanding success rates.</p>
           <div class="partner-button-wrap w-clearfix"><a href="http://letsgetready.org/donate/" target="_blank" class="partner-button w-button">See How You Can Help Let&#x27;s Get Ready!</a><a href="https://lem.ma/blog" target="_blank" class="partner-button-2 w-button">Read More About Our Partnership!</a></div>
         </div>
-        <div class="partner-column-2 w-col w-col-4"><img src="img/lgr-colored.svg" class="partnerimg"></div>
+        <div class="partner-column-2 w-col w-col-4"><img src="/img/lgr-colored.svg" class="partnerimg"></div>
       </div>
     </div>
     <div class="lemma-ticker w-container">
@@ -135,7 +135,7 @@
   <div class="partner-section-1 nyc" id="nyc">
     <div class="w-container">
       <div class="part-row-1 w-row">
-        <div class="partner-column-1 w-col w-col-4"><img src="img/nycares-colored.svg" class="partnerimg"></div>
+        <div class="partner-column-1 w-col w-col-4"><img src="/img/nycares-colored.svg" class="partnerimg"></div>
         <div class="part-desc-wrap w-col w-col-8">
           <h3 class="partner-name-right">New York Cares</h3>
           <p class="paragraph">New York Cares' mission is to simplify and inspire greater volunteerism in New York City. The organization was founded in 1987 to simplify the process of volunteering in the city that never sleeps. Since then, the organization has grown to partner with over 1,350 nonprofits and schools, and to staff and manage 1,600 volunteer-led projects each month. Last Year alone, they served 400,000 New Yorkers in need. <br><br>Lemma has recently partnered with New York Cares to deliver our high impact content and insightful data analytics platform to a cohort of high school students in the boroughs. We are very excited to help New York Cares achieve its goals!</p>
@@ -162,7 +162,7 @@
   </div>
   <div class="partner-section-1 opp" id="oppnet">
     <div class="w-container">
-      <div class="phone-part-img"><img src="img/oppnet-colored.svg" width="300" class="partnerimg"></div>
+      <div class="phone-part-img"><img src="/img/oppnet-colored.svg" width="300" class="partnerimg"></div>
       <div class="part-row-2 w-row">
         <div class="part-desc-wrap w-col w-col-8">
           <h3 class="partner-name-left">Opportunity Network</h3>
@@ -171,7 +171,7 @@
           <p class="part-desc">The Opportunity Network works with students from historically and systematically underrepresented communities in developing their skills, knowledge, and passions to achieve their college and career goals. We honor the identities and embrace the power of each member of our community.</p>
           <div class="partner-button-wrap w-clearfix"><a href="https://opportunitynetwork.secure.force.com/pmtx/dn8n__SiteDonation?id=a1kA0000000BcTv" target="_blank" class="partner-button w-button">See How You Can Help Opportunity Network!</a><a href="https://lem.ma/blog/announcement-oppnet" target="_blank" class="partner-button-2 w-button">Read More About Our Partnership!</a></div>
         </div>
-        <div class="partner-column-2 w-col w-col-4"><img src="img/oppnet-colored.svg" class="partnerimg"></div>
+        <div class="partner-column-2 w-col w-col-4"><img src="/img/oppnet-colored.svg" class="partnerimg"></div>
       </div>
     </div>
     <div class="lemma-ticker w-container">
@@ -197,15 +197,15 @@
     <h1 class="lemma-difference-head">The Lemma Difference</h1>
     <h5 class="lemdif-tag">Our platform is designed to address key areas of all stakeholders in education.</h5>
     <div class="container w-container">
-      <div class="div-block-4"><img src="img/data-for-students.svg" width="75" class="lemdif-img partners">
+      <div class="div-block-4"><img src="/img/data-for-students.svg" width="75" class="lemdif-img partners">
         <div class="lemdif-text partners">Data</div>
         <div class="lemdif-text">For Students</div>
       </div>
-      <div class="div-block-5"><img src="img/insights-for-teachers.svg" width="75" class="lemdif-img partners">
+      <div class="div-block-5"><img src="/img/insights-for-teachers.svg" width="75" class="lemdif-img partners">
         <div class="lemdif-text partners">Insights</div>
         <div class="lemdif-text">For Educators</div>
       </div>
-      <div class="div-block-6"><img src="img/metrics-for-administrators.svg" width="75" class="lemdif-img partners">
+      <div class="div-block-6"><img src="/img/metrics-for-administrators.svg" width="75" class="lemdif-img partners">
         <div class="lemdif-text partners">Metrics</div>
         <div class="lemdif-text">For Administrators</div>
       </div>
@@ -219,13 +219,13 @@
           <div class="diftext">- Use our materials to flip a class, plug gaps in your curriculum, or to replace an existing solution!</div>
 						<a href="#" class="tutorial-link">Watch this to learn more</a>
 						</div>
-        <div class="lem-dif-img-wrap w-col w-col-5"><img src="img/hundreds-of-problems.svg" class="lemdif-img"></div>
+        <div class="lem-dif-img-wrap w-col w-col-5"><img src="/img/hundreds-of-problems.svg" class="lemdif-img"></div>
       </div>
       <div class="difrow animated fadeIn w-row">
-        <div class="lem-dif-img-wrap w-col w-col-5"><img src="img/personalized-dashboard.svg" width="300" class="lemdif-img phone">
+        <div class="lem-dif-img-wrap w-col w-col-5"><img src="/img/personalized-dashboard.svg" width="300" class="lemdif-img phone">
 				</div>
         <div class="column-4 w-col w-col-7">
-          <div class="div-block-7 comp"><img src="img/personalized-dashboard.svg" width="300" class="lemdif-img">
+          <div class="div-block-7 comp"><img src="/img/personalized-dashboard.svg" width="300" class="lemdif-img">
 					</div>
           <h4 class="difhead">Better Insights</h4>
           <div class="diftext">- All student activity in Lemma is monitored, catalogued, and secured</div>
@@ -239,7 +239,7 @@
           <div class="diftext">- Students ask questions directly to their instructors</div>
           <div class="diftext">- Educators leverage direct communication with the PowerPlayback to see student mistakes</div>
           <div class="diftext">- Students feel personally cared for and empowered</div><a href="#" class="tutorial-link">Watch this to learn more</a></div>
-        <div class="lem-dif-img-wrap w-col w-col-5"><img src="img/communications-suite.svg" class="lemdif-img"></div>
+        <div class="lem-dif-img-wrap w-col w-col-5"><img src="/img/communications-suite.svg" class="lemdif-img"></div>
       </div>
     </div>
   </div>
@@ -310,7 +310,7 @@
 	</footer>
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-	<script src="/prep/js/webflow.js" type="text/javascript"></script>
+	<script src="/js/webflow.js" type="text/javascript"></script>
 
 	<!-- Google Analytics Code -->
 	<script>
