--- a/public/prep.html
+++ b/public/prep.html
@@ -9,24 +9,24 @@
 	<meta property="og:title" content="Lemma | SAT Prep">
 	<meta property="og:type" content="website">
 	<meta property="fb:app_id" content="810405998993973">
-	<meta property="og:url" content="https://www.lem.ma/prep/">
-	<meta property="og:image" content="https://www.lem.ma/prep/images/og_img.jpg">
+	<meta property="og:url" content="https://www.lem.ma/">
+	<meta property="og:image" content="https://www.lem.ma/images/og_img.jpg">
 	<title>Lemma - Your Math Tutor</title>
 
 	<link href="https://fonts.googleapis.com/css?family=Roboto:300,400,400i,700,700i&subset=greek,latin" rel="stylesheet" type="text/css">
 	<noscript id="deferred-styles">
 		<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
 	</noscript>
-	<link href="/prep/css/normalize.css" rel="stylesheet" type="text/css">
-	<link href="/prep/css/animate.css" rel="stylesheet" type="text/css">
-	<link href="/prep/css/webflow.css" rel="stylesheet" type="text/css">
-	<link href="/prep/css/prep.css" rel="stylesheet" type="text/css">
-	<link href="/prep/css/footer.css" rel="stylesheet" type="text/css">
+	<link href="/css/normalize.css" rel="stylesheet" type="text/css">
+	<link href="/css/animate.css" rel="stylesheet" type="text/css">
+	<link href="/css/webflow.css" rel="stylesheet" type="text/css">
+	<link href="/css/prep.css" rel="stylesheet" type="text/css">
+	<link href="/css/footer.css" rel="stylesheet" type="text/css">
 	<script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
 </head>
 <body class="body">
 	<div data-collapse="medium" data-animation="default" data-duration="400" class="navbar w-nav">
-		<div class="container w-container"><a href="#" class="w-nav-brand"><img src="/prep/img/lemma1920x700.png" width="130" srcset="/prep/img/lemma1920x700-p-500.png 500w, /prep/img/lemma1920x700-p-800.png 800w, /prep/img/lemma1920x700-p-1080.png 1080w, /prep/img/lemma1920x700-p-1600.png 1600w, /prep/img/lemma1920x700.png 1920w" sizes="(max-width: 479px) 93vw, 168px" class="image-17"></a>
+		<div class="container w-container"><a href="#" class="w-nav-brand"><img src="/img/lemma1920x700.png" width="130" srcset="/img/lemma1920x700-p-500.png 500w, /img/lemma1920x700-p-800.png 800w, /img/lemma1920x700-p-1080.png 1080w, /img/lemma1920x700-p-1600.png 1600w, /img/lemma1920x700.png 1920w" sizes="(max-width: 479px) 93vw, 168px" class="image-17"></a>
 			<nav role="navigation" class="nav-menu w-nav-menu"><a href="#Lemma-Difference" class="nav-link about w-nav-link">About</a><a href="/home/team" class="nav-link teamlink w-nav-link">Team</a><a href="/daily" target="_blank" class="nav-link pod w-nav-link">Problem of the Day</a><a href="/blog" target="_blank" class="nav-link blog w-nav-link">Blog</a><a href="/books/ByrW8zXlGAhREdPsLb_cPA/checkout?refe=%2Ftesting%2Fsat" class="nav-link login w-nav-link">Login</a></nav>
 			<div class="w-nav-button">
 				<div class="w-icon-nav-menu"></div>
@@ -53,7 +53,7 @@
 		<div class="container-5 w-container animated fadeIn">
 			<a href="/books/ByrW8zXlGAhREdPsLb_cPA/checkout?refe=%2Ftesting%2Fsat" class="button-4 w-button">Start Your SAT Prep Here!</a>
 		</div>
-		<img src="/prep/img/hero-desk.jpg" width="960" srcset="/prep/img/hero-desk-800.jpeg 800w, /prep/img/hero-desk-1080.jpeg 1080w, /prep/img/hero-desk-1600.jpeg 1600w, /prep/img/hero-desk.jpg 1920w" sizes="(max-width: 991px) 100vw, 960px">
+		<img src="/img/hero-desk.jpg" width="960" srcset="/img/hero-desk-800.jpeg 800w, /img/hero-desk-1080.jpeg 1080w, /img/hero-desk-1600.jpeg 1600w, /img/hero-desk.jpg 1920w" sizes="(max-width: 991px) 100vw, 960px">
 	</div>
 	<div id="Tagline" class="section-6 animated fadeIn">
 		<h2 class="heading-21">Outstanding math content and support from a team of dedicated educators</h2>
@@ -67,17 +67,17 @@
 			<div class="row-3 w-row">
 				<div class="dif_block w-col w-col-4">
 					<h3 class="dif_block-heading">Practice</h3>
-					<div class="square-img"><img data-src="/prep/img/hundreds-of-problems.svg" class="lemdifimg" data-ix="icon-grow" /></div>
+					<div class="square-img"><img data-src="/img/hundreds-of-problems.svg" class="lemdifimg" data-ix="icon-grow" /></div>
 					<div class="text-block-3">Hundreds of great problems</div>
 				</div>
 				<div class="dif_block w-col w-col-4">
 					<h3 class="dif_block-heading">Learn</h3>
-					<div class="square-img"><img data-src="/prep/img/personalized-dashboard.svg" class="lemdifimg" data-ix="icon-grow"></div>
+					<div class="square-img"><img data-src="/img/personalized-dashboard.svg" class="lemdifimg" data-ix="icon-grow"></div>
 					<div class="text-block-3">Custom dashboard directs your study</div>
 				</div>
 				<div class="dif_block w-col w-col-4">
 					<h3 class="dif_block-heading">Connect</h3>
-					<div class="square-img"><img data-src="/prep/img/communications-suite.svg" class="lemdifimg" data-ix="icon-grow"></div>
+					<div class="square-img"><img data-src="/img/communications-suite.svg" class="lemdifimg" data-ix="icon-grow"></div>
 					<div class="text-block-3">Personalized online support</div>
 				</div>
 			</div>
@@ -88,16 +88,16 @@
 			<h2 class="heading-10">Our Partners</h2>
 			<div class="partner-wrap">
 				<a href="https://www.philadelphiafutures.org/" target="_blank" />
-					<img class="partner-image" data-src="/prep/img/pf-color.svg" data-ix="icon-grow"/>
+					<img class="partner-image" data-src="/img/pf-color.svg" data-ix="icon-grow"/>
 				</a>
 				<a href="http://letsgetready.org/" target="_blank">
-					<img class="partner-image" data-src="/prep/img/lgr-colored_1.svg" data-ix="icon-grow"/>
+					<img class="partner-image" data-src="/img/lgr-colored_1.svg" data-ix="icon-grow"/>
 				</a>
 				<a href="https://www.newyorkcares.org/" target="_blank">
-					<img class="partner-image" data-src="/prep/img/nycares-colored.svg" data-ix="icon-grow"/>
+					<img class="partner-image" data-src="/img/nycares-colored.svg" data-ix="icon-grow"/>
 				</a>
 				<a href="https://opportunitynetwork.org/" target="_blank">
-					<img class="partner-image" data-src="/prep/img/oppnet-colored.svg" data-ix="icon-grow"/>
+					<img class="partner-image" data-src="/img/oppnet-colored.svg" data-ix="icon-grow"/>
 				</a>
 			</div>
 		</div>
@@ -130,10 +130,10 @@
 						<div class="w-row">
 							<div class="w-col w-col-7">
 								<div class="tabgif">
-									<img src="/prep/img/comp-bar.svg" style="width: 400px; height: 25px; display: block;" />
+									<img src="/img/comp-bar.svg" style="width: 400px; height: 25px; display: block;" />
 									<video autoplay="autoplay" loop="loop" width="400" height="300">
-										<source data-src="/prep/img/pedagogy.mp4" type="video/mp4" />
-										<!--<img src="/prep/img/pedagogy.gif" width="400" height="300" />-->
+										<source data-src="/img/pedagogy.mp4" type="video/mp4" />
+										<!--<img src="/img/pedagogy.gif" width="400" height="300" />-->
 									</video>
 								</div>
 							</div>
@@ -151,10 +151,10 @@
 						<div class="w-row">
 							<div class="w-col w-col-7">
 								<div class="tabgif">
-									<img src="/prep/img/comp-bar.svg" style="width: 400px; height: 25px;" />
+									<img src="/img/comp-bar.svg" style="width: 400px; height: 25px;" />
 									<video autoplay="autoplay" loop="loop" width="400" height="300" >
-										<source data-src="/prep/img/ask-a-q.mp4" type="video/mp4" />
-										<!--<img src="/prep/img/ask-a-q.gif" width="400" height="300" />-->
+										<source data-src="/img/ask-a-q.mp4" type="video/mp4" />
+										<!--<img src="/img/ask-a-q.gif" width="400" height="300" />-->
 									</video>
 								</div>
 							</div>
@@ -172,10 +172,10 @@
 						<div class="w-row">
 							<div class="w-col w-col-7">
 								<div class="tabgif">
-									<img src="/prep/img/comp-bar.svg" style="width: 400px; height: 25px;" />
+									<img src="/img/comp-bar.svg" style="width: 400px; height: 25px;" />
 									<video autoplay="autoplay" loop="loop" width="400" height="300">
-										<source data-src="/prep/img/platform.mp4" type="video/mp4" />
-										<!--<img src="/prep/img/platform.gif" width="400" height="300" />-->
+										<source data-src="/img/platform.mp4" type="video/mp4" />
+										<!--<img src="/img/platform.gif" width="400" height="300" />-->
 									</video>
 								</div>
 							</div>
@@ -260,7 +260,7 @@
 	</footer>
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-	<script src="/prep/js/webflow.js" type="text/javascript"></script>
+	<script src="/js/webflow.js" type="text/javascript"></script>
 
 	<!-- Google Analytics Code -->
 	<script>
